<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_title"
        android:id="@+id/feedbackTxt"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="18sp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/feedbackTxt"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/feedback_layout"
        app:cardBackgroundColor="@color/grey_dark"
        app:cardElevation="20dp"
        app:cardCornerRadius="15dp">



            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="false"
                android:hint="@string/start_typing_your_feedback_here"
                android:textColor="@color/white"
                android:textColorHint="@color/white_grey"
                android:gravity="start"
                android:layout_margin="5dp"
                android:id="@+id/feedback"/>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:backgroundTint="#1896F1"
        android:layout_below="@+id/feedback_layout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        app:cornerRadius="10dp"
        android:id="@+id/submitBtn"/>




</RelativeLayout>