<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000A23"
    tools:context=".Login">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:id="@+id/tvLogin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/white_grey"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/tvLogin"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/white_grey"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:layout_below="@+id/email"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/password"/>




    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        android:backgroundTint="#1896F1"
        android:id="@+id/loginBtn"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password"
        android:id="@+id/forgot_password"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:focusable="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginBtn"
        android:id="@+id/loadingPb"/>

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="20dp"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginEnd="20dp"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:layout_below="@+id/loginBtn"-->
<!--        android:id="@+id/or">-->


<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="@color/grey_dark"-->
<!--            android:layout_toStartOf="@+id/orTxt"-->
<!--            android:layout_marginEnd="10dp"-->
<!--            android:layout_centerVertical="true"/>-->


<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/or"-->
<!--            android:textColor="@color/white"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:id="@id/orTxt"/>-->

<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="@color/grey_dark"-->
<!--            android:layout_toEndOf="@+id/orTxt"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:layout_centerVertical="true"/>-->

<!--    </RelativeLayout>-->



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:id="@+id/dha"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="15sp"
        android:textColor="@color/light_blue"
        android:id="@+id/signUp"
        android:layout_toEndOf="@+id/dha"
        android:layout_marginStart="5dp"/>

    </RelativeLayout>

</RelativeLayout>