<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_dark"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_dark">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/top">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="50dp"
                android:id="@+id/img_card"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background"
                    android:id="@+id/profile_img"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/img_card"
                android:layout_marginStart="10dp"
                android:textColor="#027806"
                android:id="@+id/username"
                android:textStyle="bold"
                android:text="@string/app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/post_title"
                android:layout_below="@+id/username"
                android:layout_toEndOf="@+id/img_card"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:text="@string/description"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/post_date"
                android:textColor="@color/white"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:text="12:00"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/top"
            android:id="@+id/mid">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:id="@+id/post_img"
                android:visibility="gone"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/project_topic"
                android:textStyle="bold"
                android:visibility="gone"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:id="@+id/post_text"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/mid"
            android:id="@+id/bottom">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_upvote"
                android:id="@+id/upvote"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:text="10"
                android:id="@+id/upvote_count"
                android:textColor="@color/white"
                android:layout_toEndOf="@+id/upvote"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_comment"
                android:layout_toEndOf="@+id/upvote_count"
                android:id="@+id/comment"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:text="10"
                android:id="@+id/comment_count"
                android:textColor="@color/white"
                android:layout_toEndOf="@+id/comment"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>